@@ -208,6 +208,12 @@ case $arch in
         ;;
 esac
 
+# Path to python program file.
+export PYTHON_BIN='python'
+
+# Default password scheme.
+export DEFAULT_PASSWORD_SCHEME='SSHA'
+
 # Check distribution.
 #   - DISTRO
 #   - DISTRO_VERSION
@@ -215,7 +221,6 @@ esac
 #
 # UNSUPPORTED_RELEASE will be set to 'YES' if current Linux/BSD release is
 # an old release and unsupported anymore.
-export PYTHON_BIN='python'
 if [ X"${KERNEL_NAME}" == X"LINUX" ]; then
     # Directory of RC scripts.
     export DIR_RC_SCRIPTS='/etc/init.d'
@@ -299,6 +304,10 @@ elif [ X"${KERNEL_NAME}" == X'FREEBSD' ]; then
     fi
 
     export SHELL_BASH='/usr/local/bin/bash'
+
+    # Default password scheme.
+    export DEFAULT_PASSWORD_SCHEME='BCRYPT'
+
 elif [ X"${KERNEL_NAME}" == X'OPENBSD' ]; then
     export DISTRO='OPENBSD'
     export DISTRO_VERSION="$(uname -r)"
@@ -313,6 +322,11 @@ elif [ X"${KERNEL_NAME}" == X'OPENBSD' ]; then
     if echo "${DISTRO_VERSION}" | grep '^5.[123]' &>/dev/null ; then
         export UNSUPPORTED_RELEASE='YES'
     fi
+
+    # Default password scheme.
+    # Require py-bcrypt-0.4 for function "checkpw()", but OpenBSD 5.5 ships 0.3.
+    #export DEFAULT_PASSWORD_SCHEME='BCRYPT'
+
 else
     # Not support *BSD and other distrobutions yet.
     echo "Error: Your OS is not supported yet."
