@@ -133,8 +133,8 @@ EOF
 mysql_import_vmail_users()
 {
     ECHO_DEBUG "Generating SQL template for postfix virtual hosts: ${MYSQL_VMAIL_SQL}."
-    export DOMAIN_ADMIN_PASSWD="$(gen_md5_passwd ${DOMAIN_ADMIN_PASSWD})"
-    export FIRST_USER_PASSWD="$(gen_md5_passwd ${FIRST_USER_PASSWD})"
+    export DOMAIN_ADMIN_PASSWD="$(generate_password_hash ${DEFAULT_PASSWORD_SCHEME} ${DOMAIN_ADMIN_PASSWD})"
+    export FIRST_USER_PASSWD="$(generate_password_hash ${DEFAULT_PASSWORD_SCHEME} ${FIRST_USER_PASSWD})"
 
     # Generate SQL.
     # Modify default SQL template, set storagebasedirectory.
