@@ -1,3 +1,3 @@
-0cfc58186ccdb15b6fda0253df7efc50  misc/iRedAdmin-0.4.tar.bz2
+d37823a9d8cb4b9db7ece53cb510cfe7  misc/iRedAdmin-0.4.tar.bz2
 c5faae814c4aeb1c92a626a7e882af68  misc/iRedAPD-1.4.4.tar.bz2
 5028c6f9fa88d0c84b0fde0b84355203  misc/roundcubemail-1.0.2.tar.gz
