@@ -1,2 +1,2 @@
-9b4fd152d35a1ac92a09087c0e5e3a3713b1afbe  misc/iRedAdmin-0.4.tar.bz2
+07e0fa5f3e99044f5081ab262aa29857d138738b  misc/iRedAdmin-0.4.tar.bz2
 bf2ccebe00e4016dd16ad1e41b7cd821cb71f374  misc/iRedAPD-1.4.4.tar.bz2
